Added gestures for volume, media, browsers

--- a/libinput-gestures/.config/libinput-gestures.conf
+++ b/libinput-gestures/.config/libinput-gestures.conf
@@ -13,5 +13,19 @@ gesture swipe left  3    xdotool key alt+Left
 gesture swipe right 3    xdotool key alt+Right
 
 # Maximize + Unmaximize/Minimize gestures
-gesture pinch out        xdotool key ctrl+super+Up
-gesture pinch in         xdotool key ctrl+super+Down
+gesture pinch out   2    xdotool key ctrl+super+Up
+gesture pinch in    2    xdotool key ctrl+super+Down
+
+# Raise/lower/mute volume
+gesture swipe right_up   4 xdotool key XF86AudioRaiseVolume
+gesture swipe left_down  4 xdotool key XF86AudioLowerVolume
+gesture swipe right_down 4 xdotool key XF86AudioMute
+
+# Play/pause media
+gesture swipe left_up    4 xdotool key XF86AudioPlay
+
+# Open a new browser tab
+gesture swipe right_up   3 xdotool key control+t
+
+# Close current browser tab
+gesture swipe left_down  3 xdotool key control+w
