Added gestures for next/previous

--- a/libinput-gestures/.config/libinput-gestures.conf
+++ b/libinput-gestures/.config/libinput-gestures.conf
@@ -29,3 +29,7 @@ gesture swipe right_up   3 xdotool key control+t
 
 # Close current browser tab
 gesture swipe left_down  3 xdotool key control+w
+
+# Go to next/previous browser tab
+gesture swipe right_down 3 xdotool key control+Tab
+gesture swipe left_up    3 xdotool key control+shift+Tab
