Added a gesture for re-opening a closed browser tab.

--- a/libinput-gestures/.config/libinput-gestures.conf
+++ b/libinput-gestures/.config/libinput-gestures.conf
@@ -30,6 +30,9 @@ gesture swipe right_up   3 xdotool key control+t
 # Close current browser tab
 gesture swipe left_down  3 xdotool key control+w
 
+# Reopen closed browser tab
+gesture pinch clockwise  2 xdotool key control+shift+t
+
 # Go to next/previous browser tab
 gesture swipe right_down 3 xdotool key control+Tab
 gesture swipe left_up    3 xdotool key control+shift+Tab
