--- a/libinput-gestures/.config/libinput-gestures.conf
+++ b/libinput-gestures/.config/libinput-gestures.conf
@@ -31,7 +31,7 @@ gesture swipe right_up   3 xdotool key control+t
 gesture swipe left_down  3 xdotool key control+w
 
 # Reopen closed browser tab
-gesture pinch clockwise  2 xdotool key control+shift+t
+gesture pinch anticlockwise  2 xdotool key control+shift+t
 
 # Go to next/previous browser tab
 gesture swipe right_down 3 xdotool key control+Tab
