--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,5 +2,8 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -sg escape-time 0
 
+# Set the prefix
+set-option -g prefix C-Space
+
 # Switch to another active session after exiting the current one
 set-option -g detach-on-destroy off
