Increased tmux's display time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,9 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -sg escape-time 0
 
+# Keep messages on the screen for longer
+set-option -g display-time 6000
+
 # Set the prefix
 set-option -g prefix C-Space
 
