Revert "Disabled all non-functioning bindings"
This reverts commit 10bbef76748e4b5aaec6db9a1f35bef551eda79b.

--- a/libinput-gestures/.config/libinput-gestures.conf
+++ b/libinput-gestures/.config/libinput-gestures.conf
@@ -1,38 +1,38 @@
 # Move to workspace up/down/left/right
-# gesture swipe up    4    xdotool key ctrl+alt+Up
-# gesture swipe down  4    xdotool key ctrl+alt+Down
-# gesture swipe left  4    xdotool key ctrl+alt+Left
-# gesture swipe right 4    xdotool key ctrl+alt+Right
+gesture swipe up    4    xdotool key ctrl+alt+Up
+gesture swipe down  4    xdotool key ctrl+alt+Down
+gesture swipe left  4    xdotool key ctrl+alt+Left
+gesture swipe right 4    xdotool key ctrl+alt+Right
 
 # Spreads all windows in all workspaces + Show/Hide desktop
-# gesture swipe up    3    xdotool key shift+super+w
-# gesture swipe down  3    xdotool key ctrl+super+d
+gesture swipe up    3    xdotool key shift+super+w
+gesture swipe down  3    xdotool key ctrl+super+d
 
 # Page back and forward on most Web Browsers
 gesture swipe left  3    xdotool key alt+Left
 gesture swipe right 3    xdotool key alt+Right
 
 # Maximize + Unmaximize/Minimize gestures
-# gesture pinch out   2    xdotool key ctrl+super+Up
-# gesture pinch in    2    xdotool key ctrl+super+Down
+gesture pinch out   2    xdotool key ctrl+super+Up
+gesture pinch in    2    xdotool key ctrl+super+Down
 
 # Raise/lower/mute volume
-# gesture swipe right_up   4 xdotool key XF86AudioRaiseVolume
-# gesture swipe left_down  4 xdotool key XF86AudioLowerVolume
-# gesture swipe right_down 4 xdotool key XF86AudioMute
+gesture swipe right_up   4 xdotool key XF86AudioRaiseVolume
+gesture swipe left_down  4 xdotool key XF86AudioLowerVolume
+gesture swipe right_down 4 xdotool key XF86AudioMute
 
 # Play/pause media
-# gesture swipe left_up    4 xdotool key XF86AudioPlay
+gesture swipe left_up    4 xdotool key XF86AudioPlay
 
 # Open a new browser tab
-# gesture swipe right_up   3 xdotool key control+t
+gesture swipe right_up   3 xdotool key control+t
 
 # Close current browser tab
-# gesture swipe left_down  3 xdotool key control+w
+gesture swipe left_down  3 xdotool key control+w
 
 # Reopen closed browser tab
 gesture pinch anticlockwise  2 xdotool key control+shift+t
 
 # Go to next/previous browser tab
-# gesture swipe right_down 3 xdotool key control+Tab
-# gesture swipe left_up    3 xdotool key control+shift+Tab
+gesture swipe right_down 3 xdotool key control+Tab
+gesture swipe left_up    3 xdotool key control+shift+Tab
