Split out work-specific git config
If `.gitconfig.work` doesn't exist, the include (allegedly) will not
break

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,5 +24,5 @@
 	editor = vim
 	autocrlf = false
 	ignorecase = false
-[url "git@github.com:[REDACTED]/"]
-    insteadOf = rs:
+[include]
+    path = .gitconfig.work
