--- a/youtube-dl/.config/youtube-dl/config
+++ b/youtube-dl/.config/youtube-dl/config
@@ -1,11 +1,17 @@
 # Lines starting with # are comments
 
-# Old save location:
-# -o /mnt/c/Users/chend/Videos/youtube-dl/%(title)s.%(ext)s
+# Output filename template
+--output /mnt/g/Cloud\ Storage/Google\ Drive/Backlog/Videos/Rip/%(title)s.%(ext)s
 
-# New save location (folder in Google Drive)
--o /mnt/c/Users/chend/Google\ Drive/Videos/New\ \(To\ Be\ Sorted\)/%(title)s.%(ext)s
+# Download only videos not listed in the archive file
+# Record the IDs of all downloaded videos in it
+--download-archive /mnt/g/Cloud\ Storage/Google\ Drive/Backlog/Videos/Rip/downloaded.txt
+
+# Select the best quality format represented by a single file with video and audio
+--format best
+
+# Do not overwrite files
+--no-overwrites
 
 # Download all of the available subtitles of the video
 --all-subs
-
