--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,9 @@
 set -g default-terminal "xterm-256color"
+
+# Fix tmux colors
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Fix <Esc> lag in Vim
 set -sg escape-time 0
 
 # Keep messages on the screen for longer
