Add tmux plugins
tpm - tmux plugin manager
tmux-resurrect - save and restore sessions
tmux-open - open files and URLs, search the web for highlighted text

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,3 +14,27 @@ set-option -g prefix C-Space
 
 # Switch to another active session after exiting the current one
 set-option -g detach-on-destroy off
+
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# Install tpm and plugins automatically when tmux is started
+# keep this before the final "run '~/.tmux/plugins/tpm/tpm'"
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+
+# Plugin settings: tmux-resurrect
+
+# Restore vim session if Session.vim file is present
+set -g @resurrect-strategy-vim 'session'
+
+# Save and restore tmux pane contents (e.g. command/output history)
+set -g @resurrect-capture-pane-contents 'on'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
