Update SSH key file names

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,5 +1,5 @@
 Host github.com
-    IdentityFile ~/.ssh/id_ed25519_github
+    IdentityFile ~/.ssh/github_id_ed25519
 
 Host bitbucket.org
-    IdentityFile ~/.ssh/id_rsa_bitbucket
+    IdentityFile ~/.ssh/bitbucket_id_ed25519
