--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,7 @@
 	name = Chloe-H
 [init]
 	templatedir = ~/.git-templates
+	defaultBranch = main
 [filter "lfs"]
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
