--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,5 +1,7 @@
-Host ssh.dev.azure.com
+Host ssh.dev.azure.com devops.[REDACTED].com
     IdentityFile ~/.ssh/[REDACTED]_azdo_rsa
+    HostkeyAlgorithms +ssh-rsa
+    PubkeyAcceptedKeyTypes ssh-rsa
 
 Host github.com
     IdentityFile ~/.ssh/github_id_ed25519
