--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,7 @@ set-option -g detach-on-destroy off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Install tpm and plugins automatically when tmux is started
 # keep this before the final "run '~/.tmux/plugins/tpm/tpm'"
