--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,29 +1,14 @@
 [user]
 	email = Chloe-H@users.noreply.github.com
-	name = Chloe-H
+	name = Chloe
 [init]
 	templatedir = ~/.git-templates
-	defaultBranch = main
-[filter "lfs"]
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
-	clean = git-lfs clean -- %f
-[diff]
-	tool = vimdiff
-[merge]
-	tool = vimdiff
-	conflictstyle = diff3
-[difftool]
-	prompt = true
-[alias]
-	d = difftool
-[push]
-	default = nothing
 [core]
 	excludesfile = ~/.gitignore_global
-	editor = vim
-	autocrlf = false
-	ignorecase = false
-[include]
-    path = .gitconfig.work
+; include only if a remote with the given URL exists (note
+; that such a URL may be provided later in a file or in a
+; file read after this file is read)
+[includeIf "hasconfig:remote.*.url:*Chloe-H**"]
+    path = .gitconfigs/.gitconfig.personal
+[includeIf "hasconfig:remote.*.url:*rs**"]
+    path = .gitconfigs/.gitconfig.work
