--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = Chloe-H@users.noreply.github.com
 	name = Chloe-H
+	email = Chloe-H@users.noreply.github.com
 [init]
 	templatedir = ~/.git-templates
 [core]
@@ -8,7 +8,7 @@
 ; include only if a remote with the given URL exists (note
 ; that such a URL may be provided later in a file or in a
 ; file read after this file is read)
-[includeIf "hasconfig:remote.*.url:*Chloe-H*/**"]
+[includeIf "hasconfig:remote.*.url:**/Chloe-H/**"]
     path = .gitconfigs/.gitconfig.personal
-[includeIf "hasconfig:remote.*.url:*rs**"]
+[includeIf "hasconfig:remote.*.url:**/git@stash.[REDACTED].com:*/**"]
     path = .gitconfigs/.gitconfig.work
