--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,13 @@
-set -g default-terminal "xterm-256color"
+# TODO: Either un-comment or delete
+# set -g default-terminal "xterm-256color"
 
 # Fix tmux colors
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# TODO: Either un-comment or delete
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Fix <Esc> lag in Vim
-set -sg escape-time 1
+# TODO: Either un-comment or delete
+# set -sg escape-time 1
 
 # Keep messages on the screen for longer
 set-option -g display-time 6000
