[reorg-rhel] Enable Vi mode in tmux
Every other time I've used tmux that I can recall, Vi mode has been
enabled without any extra effort on my part. Until now. Ryan said he had
the same experience. Maybe tmux is configured with different defaults on
different operating systems? I think I've only used it on Ubuntu before.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,9 @@
 # TODO: Either un-comment or delete
 # set -sg escape-time 1
 
+# Enable Vi mode
+set-window-option -g mode-keys vi
+
 # Keep messages on the screen for longer
 set-option -g display-time 6000
 
