--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,13 +1,11 @@
-# TODO: Either un-comment or delete
+# TODO: Figure out what this was for/whether to keep it around
 # set -g default-terminal "xterm-256color"
 
 # Fix tmux colors
-# TODO: Either un-comment or delete
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Fix <Esc> lag in Vim
-# TODO: Either un-comment or delete
-# set -sg escape-time 1
+set -sg escape-time 1
 
 # Enable Vi mode
 set-window-option -g mode-keys vi
