Modify tmux's terminal color override
Per this video: https://youtu.be/DzNmUNvnB04?si=eYyrjrBJZUIAE8KB&t=533

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@
 # set -g default-terminal "xterm-256color"
 
 # Fix tmux colors
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Fix <Esc> lag in Vim
 set -sg escape-time 1
