Modify tmux's built-in pane/window keymaps
Make new panes and windows open in the active pane's directory, for
convenience. Stolen from https://youtu.be/DzNmUNvnB04?si=Vg8ck1MDxkJwqTPO&t=747

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,11 @@ set-option -g prefix C-Space
 # Switch to another active session after exiting the current one
 set-option -g detach-on-destroy off
 
+# Open panes and windows in the active pane's current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
