Add Ryan's fancy tmux statusline customizations

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,19 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 
+# Customize statusline
+set -g status-position bottom
+set -g window-status-separator ''
+set -g status-bg black
+set -g status-fg magenta
+
+set-option -g status-left ""
+set -g status-right ""
+
+set -g window-status-format         " #[fg=default]#I #F#W "
+set -g window-status-current-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #F#W#[bg=default]#[fg=magenta]"
+
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
