Customize tmux status
Looked up stuff myself

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,11 +31,11 @@ set -g window-status-separator ''
 set -g status-bg black
 set -g status-fg magenta
 
-set-option -g status-left ""
-set -g status-right ""
+set-option -g status-left "#[fg=black]#[fg=white]#{=/-32/...:session_name} #[fg=black]"
+set -g status-right       "#[fg=colour105]%A, %b %e #[bg=colour105]#[fg=black] %k:%M %l:%M %p "
 
-set -g window-status-format         " #[fg=default]#I #F#W "
-set -g window-status-current-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #F#W#[bg=default]#[fg=magenta]"
+set -g window-status-format         "#[bg=colour96]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=colour96]"
+set -g window-status-current-format "#[bg=magenta]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=default]"
 
 
 # Plugins
