Remove character from tmux status
I forgot to remove a character from the inactive window status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,7 +34,7 @@ set -g status-fg magenta
 set-option -g status-left "#[fg=black]#[fg=white]#{=/-32/...:session_name} #[fg=black]"
 set -g status-right       "#[fg=colour105]%A, %b %e #[bg=colour105]#[fg=black] %k:%M %l:%M %p "
 
-set -g window-status-format         "#[bg=colour96]#[fg=black] #I  #W #[bg=default]#[fg=colour96]#{?window_flags,  #F , }"
+set -g window-status-format         "#[bg=colour96]#[fg=black] #I  #W #[bg=default]#[fg=colour96]#{?window_flags, #F , }"
 set -g window-status-current-format "#[bg=magenta]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=default]"
 
 
