--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,13 +28,23 @@ bind c new-window -c "#{pane_current_path}"
 # Customize statusline
 set -g status-position bottom
 set -g window-status-separator ''
-set -g status-bg black
-set -g status-fg magenta
+set -g status-bg black # value of #[bg=default] in status bar
+set -g status-fg magenta # value of #[fg=default] in status bar
 
-set-option -g status-left "#[fg=black]#[fg=white]#{=/-32/...:session_name} #[fg=black]"
-set -g status-right       "#[fg=colour105]%A, %b %e #[bg=colour105]#[fg=black] %k:%M %l:%M %p "
+# so the session name in the left status bar doesn't get cut off
+set -g status-left-length 50
+# Left status bar, purple symbol, then white text on black background
+# |\ {session name} >
+set-option -g status-left "#[fg=colour105]#[fg=white] #{session_name} #[fg=black]"
+# Right status bar, purple and black (imitating lualine)
+# {weekday long name}, {month} {day} < {time (24 hour)} < {time (AM/PM)}
+set -g status-right       "#[fg=colour105]%A, %b %e #[bg=colour105]#[fg=black] %k:%M  %l:%M %p "
 
+# Inactive windows, black text on muted pink background
+# > {window number} > {window name} > {window flags (if there are any)} >
 set -g window-status-format         "#[bg=colour96]#[fg=black] #I  #W #[bg=default]#[fg=colour96]#{?window_flags, #F , }"
+# Current window, black text on bright pink background
+# > {window number} > {window name} > {window flags (if there are any)} >
 set -g window-status-current-format "#[bg=magenta]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=default]"
 
 
