Swapped pink and purple, spiced up right status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,12 +34,12 @@ set -g status-fg magenta # value of #[fg=default] in status bar
 # so the session name in the left status bar doesn't get cut off
 set -g status-left-length 50
 set-option -g status-left "#[fg=colour105]#[fg=white] #{session_name} #[fg=black]"
-set -g status-right       "#[fg=colour105]%A, %b %e #[bg=colour105]#[fg=black] %k:%M  %l:%M %p "
+set -g status-right       "#[fg=colour96]%A, %b %e #[fg=colour13]#[bg=colour13]#[fg=black] %k:%M #[bg=default]#[fg=default]#[bg=magenta]#[fg=black] %l:%M %p "
 
 # > {window number} > {window name} > {window flags (if there are any)} >
 # "current" window vs. inactive windows
-set -g window-status-format         "#[bg=colour96]#[fg=black] #I  #W #[bg=default]#[fg=colour96]#{?window_flags, #F , }"
-set -g window-status-current-format "#[bg=magenta]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=default]"
+set -g window-status-format         "#[bg=colour60]#[fg=black] #I  #W #[bg=default]#[fg=colour60]#{?window_flags, #F , }"
+set -g window-status-current-format "#[bg=colour105]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=colour105]"
 
 
 # Plugins
