Fix left status bar color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ set -g status-fg magenta # value of #[fg=default] in status bar
 
 # so the session name in the left status bar doesn't get cut off
 set -g status-left-length 50
-set-option -g status-left "#[fg=colour105]#[fg=white] #{session_name} #[fg=black]"
+set-option -g status-left "#[fg=white] #{session_name} #[fg=black]"
 set -g status-right       "#[fg=colour96]%A, %b %e #[fg=colour13]#[bg=colour13]#[fg=black] %k:%M #[bg=default]#[fg=default]#[bg=magenta]#[fg=black] %l:%M %p "
 
 # > {window number} > {window name} > {window flags (if there are any)} >
