--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,7 +38,7 @@ set -g status-right       "#[fg=colour96]%A, %b %e #[fg=colour13]#[bg=colour1
 
 # > {window number} > {window name} > {window flags (if there are any)} >
 # "current" window vs. inactive windows
-set -g window-status-format         "#[bg=colour60]#[fg=black] #I  #W #[bg=default]#[fg=colour60]#{?window_flags, #F , }"
+set -g window-status-format         "#[bg=colour60]#[fg=black] #I  #W #{?window_flags,  #F , }#[bg=default]#[fg=colour60]"
 set -g window-status-current-format "#[bg=colour105]#[fg=black] #I  #W#{?window_flags,  #F , }#[bg=default]#[fg=colour105]"
 
 
