Move git user info to personal gitconfig
Lesson mf learned, it's safest to keep user info out of the top-level
gitconfig to make /absolutely certain/ that my personal GitHub account
isn't linked to from the wrong commits.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,4 @@
-[user]
-	name = Chloe-H
-	email = Chloe-H@users.noreply.github.com
+; WARNING: Do not set "[user]" info here
 [core]
 	editor = nvim
 	excludesfile = ~/.gitignore_global
