--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,6 +2,7 @@
 [core]
     editor = nvim
     excludesfile = ~/.gitignore_global
+    sshCommand = C:/Windows/System32/OpenSSH/ssh.exe
 [diff]
     tool = nvimdiff
 [difftool]
